fable/test/valid/int_literal_eq_int_literal.f
      program prog
      write(6, *) (123 .eq. 123)
      end
