fable/test/semantic_error/unknown_intrinsic.f
      program prog
      intrinsic unk
      write(6, *) unk(0)
      end
